#This is a list of changes in pygame's history.

Dec 13, 2000
	display.update() is entirely better in many ways [BUG]

Dec 3, 2000
	fixed timing issues. negative time.delay() will become 0

Nov 30, 2000
	UserRect module added
	all objects now have a matching type; SurfaceType, etc

Nov 29, 2000
	joystick module rewrite finished [BREAK]
	cdrom module rewrite finished [BREAK]
	all constructors using capitalized function names [BREAK]
		(Rect, pygame.Surface, pygame.font.Font, etc)

Nov 28, 2000
	Surface.convert() better handles surface flags
	All color arguments (and returns) are RGBA format [BREAK]
	Removed Surface.map_rgba and unmap_rgba [BREAK]
	Added a default font, used by passing None as font file

pygame-03
Nov 20, 2000
	Added Surface.save() to create BMPs.

Nov 16, 2000
	Surface.set_clip() fixed when passing no args [BUG]

Nov 15, 2000
	time.set_timer() now handles multiple timers
	rect(), surface(), event() renamed to \
		new_rect, new_surface(), new_event() [BREAK]
	all new_XX() functions were added to pygame.locals
	Moved pygame.music to a member of pygame.mixer [BREAK]
	Surface.blit takes a source rectangle instead of pos, size [BREAK]
	pygame.display.set_clip() correctly accepts rectstyle arg [BUG]
	Added Surface.get_flags() and Surface.get_pitch()
	Added set_cursor and get_cursor to pygame.mouse
	New module, pygame.cursors, contains sample cursors

Nov 14, 2000
	Release the Python Global Interpreter Lock on delays and IO
	Added timer events to pygame.time (check vgrade example)
	New music playback finished events
	surfarray.blit_array() supports all bit depths

Nov 11, 2000
 	pygame.display.set_mode() uses int, not short, for size [BUG]

Nov 10, 2000
	Committed to CVS
	Added pygame.display.get_driver()



BREAK = change breaks existing code
BUG   = fixed a bug that was crashing
CVS tag names are placed before the date